<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_larger"
    android:paddingStart="@dimen/padding_larger"
    android:paddingEnd="@dimen/padding_larger"
    android:orientation="vertical"
    tools:context=".activities.auth.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextType"
        android:text="@string/check_your_email_and_the_paste_the_reset_code_in_the_field_below"
        />

    <EditText
        android:id="@+id/resetCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="40dp"
        style="@style/ResetCodeEditText"
        tools:ignore="LabelFor"
        android:autofillHints="Reset Code"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        style="@style/PasswordEditText"
        android:hint="@string/new_password_hint"
        android:autofillHints="password"
        />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        style="@style/PasswordEditText"
        android:hint="@string/confirm_new_password_hint"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/padding_larger"
        style="@style/PrimaryButton"
        android:text="@string/submit_new_password_button_title"
        />

</LinearLayout>