<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_larger"
    android:paddingEnd="@dimen/padding_larger"
    android:paddingTop="@dimen/padding_larger"
    tools:context=".ui.activities.auth.ForgotPasswordActivity">

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InfoTextType"
        android:textAlignment="center"
        android:text="@string/did_you_forget_your_password"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/infoText"
        style="@style/EmailEditText"
        tools:ignore="LabelFor"
        android:autofillHints="" />
    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="40dp"
        style="@style/PrimaryButton"
        android:text="@string/reset_password"
        />
    <TextView
        android:id="@+id/orTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/resetPasswordButton"
        style="@style/TitleTextType"
        android:text="@string/or"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/alreadyHaveCodeButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/orTextView"
        android:layout_marginTop="20dp"
        style="@style/SecondaryButton"
        android:text="@string/already_have_a_code"
        />

</RelativeLayout>